// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook Snapshots > 'LoginPage' > Primary 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXs css-nzinn5-MuiContainer-root"
    data-testid="login-page"
  >
    <div
      class="MuiStack-root css-bp85kq-MuiStack-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-1j0stpa-MuiPaper-root"
      >
        <div
          class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-m51mik-MuiTypography-root"
        >
          Arkitema UI
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-1j6c6lb-MuiButtonBase-root-MuiButton-root"
          data-testid="arkitema-button"
          tabindex="0"
          type="button"
        >
          Login
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshots > 'MobileWarningPage' > Primary 1`] = `
<div>
  <div
    class="MuiBox-root css-h8m1q6"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-zmufju-MuiSvgIcon-root"
      data-testid="DoDisturbIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10 10-4.5 10-10S17.5 2 12 2zM4 12c0-4.4 3.6-8 8-8 1.8 0 3.5.6 4.9 1.7L5.7 16.9C4.6 15.5 4 13.8 4 12zm8 8c-1.8 0-3.5-.6-4.9-1.7L18.3 7.1C19.4 8.5 20 10.2 20 12c0 4.4-3.6 8-8 8z"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1gfydpg-MuiSvgIcon-root"
      data-testid="PhoneAndroidIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M16 1H8C6.34 1 5 2.34 5 4v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V4c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3H6.75V4h10.5v14z"
      />
    </svg>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1sfm4pb-MuiPaper-root"
  >
    We are sorry but this website is currently not available on mobile devices. We recommend that you access the page from your desktop computer instead.
    <p>
      Thank you for your interest
    </p>
  </div>
</div>
`;

exports[`Storybook Snapshots > 'NotFoundPage' > Primary 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-8w91co-MuiContainer-root"
  >
    <div
      class="MuiTypography-root MuiTypography-h2 css-gvn76w-MuiTypography-root"
    >
      Page Not Found
    </div>
    <p
      class="MuiTypography-root MuiTypography-body1 css-v2yeed-MuiTypography-root"
      id="404-description"
    >
      Sorry, but the page you were trying to view does not exist.
    </p>
    <div
      class="MuiStack-root css-13rwkht-MuiStack-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-8ujy7p-MuiButtonBase-root-MuiButton-root"
        data-testid="arkitema-button"
        tabindex="0"
        type="button"
      >
        Go to front page
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium css-8ujy7p-MuiButtonBase-root-MuiButton-root"
        data-testid="arkitema-button"
        tabindex="0"
        type="button"
      >
        Go back
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
